@@ -1,12 +1,14 @@
 # http://module-build.sourceforge.net/META-spec-current.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Term-Clui
-version:      1.70
+version:      1.71
 version_from: Clui.pm
 installdirs:  site
 requires:
   Term::ReadKey: 0
   Term::ReadLine::Gnu: 0
+  Extutils::MakeMaker: 0
+  File::Copy: 0
 recommends:
   Term::Size: 0
 license:      perl
